// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`Acetaminophen Integration Test parses acetaminophen 1`] = `
{
  "components": [
    {
      "atoms": [
        "C",
        "C",
        "N",
      ],
      "attachments": {
        "2": [
          {
            "atoms": [
              "O",
            ],
            "attachments": {},
            "bonds": [
              "=",
            ],
            "type": "linear",
          },
        ],
      },
      "bonds": [
        null,
        null,
      ],
      "type": "linear",
    },
    {
      "atoms": "c",
      "attachments": {
        "4": [
          {
            "atoms": [
              "O",
            ],
            "attachments": {},
            "bonds": [
              null,
            ],
            "type": "linear",
          },
        ],
      },
      "bonds": [
        null,
        null,
        null,
        null,
        null,
        null,
      ],
      "offset": 0,
      "ringNumber": 1,
      "size": 6,
      "substitutions": {},
      "type": "ring",
    },
  ],
  "type": "molecule",
}
`;

exports[`Acetaminophen Integration Test generates valid code via toCode() 1`] = `
"export const v1 = Linear(['C', 'C', 'N']);
export const v2 = Linear(['O'], ['=']);
export const v3 = v1.attach(v2, 2);
export const v4 = Ring({ atoms: 'c', size: 6 });
export const v5 = Linear(['O']);
export const v6 = v4.attach(v5, 4);
export const v7 = Molecule([v3, v6]);"
`;

exports[`Phenacetin Integration Test parses phenacetin 1`] = `
{
  "components": [
    {
      "atoms": [
        "C",
        "C",
        "N",
      ],
      "attachments": {
        "2": [
          {
            "atoms": [
              "O",
            ],
            "attachments": {},
            "bonds": [
              "=",
            ],
            "type": "linear",
          },
        ],
      },
      "bonds": [
        null,
        null,
      ],
      "type": "linear",
    },
    {
      "atoms": "c",
      "attachments": {
        "4": [
          {
            "atoms": [
              "O",
              "C",
              "C",
            ],
            "attachments": {},
            "bonds": [
              null,
              null,
              null,
            ],
            "type": "linear",
          },
        ],
      },
      "bonds": [
        null,
        null,
        null,
        null,
        null,
        null,
      ],
      "offset": 0,
      "ringNumber": 1,
      "size": 6,
      "substitutions": {},
      "type": "ring",
    },
  ],
  "type": "molecule",
}
`;

exports[`Phenacetin Integration Test generates valid code via toCode() 1`] = `
"export const v1 = Linear(['C', 'C', 'N']);
export const v2 = Linear(['O'], ['=']);
export const v3 = v1.attach(v2, 2);
export const v4 = Ring({ atoms: 'c', size: 6 });
export const v5 = Linear(['O', 'C', 'C']);
export const v6 = v4.attach(v5, 4);
export const v7 = Molecule([v3, v6]);"
`;
